@@ -52,6 +52,11 @@ module.exports = ( spectools ) => {
      * @param {string} name - typename
      */
     const checkKnownType = ( as, info, name ) => {
+        if ( info._import_use ) {
+            // Ignore incomplete definitions
+            return;
+        }
+
         switch ( name ) {
         case 'any':
         case 'boolean':
